// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`board reference replay: panier-express, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "ab8aeba61c023ea240fa72894d163a86ab3e38589693a726fb99707c4e588ac2",
}
`;

exports[`cards reference replay: pimp-my-ride, seed 23 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "f9b03d74658757c166cb37eb0cfca69d70604f855f1cd8417bf72eb021f5384e",
}
`;

exports[`catalogue reference replay: a-fond-les-ballons, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 61,
  "traceDigest": "996b3396e1b876f17206e685eb4a4bb61b18f97ee793ff775290e75a41880ef7",
}
`;

exports[`catalogue reference replay: a-fond-les-ballons, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 34,
  "traceDigest": "2a99504035340a1350eb774784d4c75a383dda9ebe3f9bd57e3ae8e01a14a78e",
}
`;

exports[`catalogue reference replay: a-fond-les-ballons, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 28,
  "traceDigest": "82a68a78c663d928c3e8c9c5d7ab01a02bdf5758d8c5492b0399bbaff97f2b96",
}
`;

exports[`catalogue reference replay: arche-de-mnemosyne, seed 11 1`] = `
{
  "actionTypes": [
    "answer",
    "game.configure",
    "timeout",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "efff3b8fc5ff06b9a3fa7ee9099de47976b0e0b3b0a422430925eed2511d36ad",
}
`;

exports[`catalogue reference replay: arche-de-mnemosyne, seed 23 1`] = `
{
  "actionTypes": [
    "answer",
    "game.configure",
    "timeout",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "9d74d725d3de313e87e60ffcce6e0ab7bcfab5aed20867cdf0cd8fc1416f345d",
}
`;

exports[`catalogue reference replay: arche-de-mnemosyne, seed 67 1`] = `
{
  "actionTypes": [
    "answer",
    "game.configure",
    "timeout",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "821d6c796fda7865302e35c1a6ff5f94246cde90a6e828fe8caa483a9d478567",
}
`;

exports[`catalogue reference replay: aventure-sauvage, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 27,
  "traceDigest": "cc5fef50f6d2c55def6d10e71811ba11754a376a30de6d7d27d6734778a03a8c",
}
`;

exports[`catalogue reference replay: aventure-sauvage, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 28,
  "traceDigest": "85db635b2b314664bfd1bf037875063fe75723c7346ce097c1282801f29136de",
}
`;

exports[`catalogue reference replay: aventure-sauvage, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 33,
  "traceDigest": "99994abe69c3ef3a0bd540f9a448c6583d4e9913c78939f77138073365bcd105",
}
`;

exports[`catalogue reference replay: ca-derape, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 11,
  "traceDigest": "8d5074ea0254f0b88d0ce002c6e2babb304d9fdce439136cdca42fdc7bde395c",
}
`;

exports[`catalogue reference replay: ca-derape, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 11,
  "traceDigest": "0399d61b90655ecbb2d4519b6cfd93461c5e46bcf16359981e690541bf779864",
}
`;

exports[`catalogue reference replay: ca-derape, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 17,
  "traceDigest": "db24bfb40bd9ee1511317e249b8aec759b24ab67edd2e3354a039d4cf1462764",
}
`;

exports[`catalogue reference replay: cat-pattes, seed 11 1`] = `
{
  "actionTypes": [
    "discard_card",
    "draw",
    "game.configure",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "072ac65e4972b296ea52fb50d49997bf61bf72ef0664f6176727a0780ccd8950",
}
`;

exports[`catalogue reference replay: cat-pattes, seed 23 1`] = `
{
  "actionTypes": [
    "discard_card",
    "draw",
    "game.configure",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "e0485db6b0c42ead0ce95fcd851448c70a318c6c282cbaa5fd5743adc2d55138",
}
`;

exports[`catalogue reference replay: cat-pattes, seed 67 1`] = `
{
  "actionTypes": [
    "discard_card",
    "draw",
    "game.configure",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "cc61b4a6c92a0dfb98d270b523bebda010a4c6a590a79fc35ce5591dd68fcfec",
}
`;

exports[`catalogue reference replay: cercles-sacres, seed 11 1`] = `
{
  "actionTypes": [
    "discard_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "52986d7c078648b9f41276c73e4e4df02eb3ad3d94af7cc5c5881e5865f40d50",
}
`;

exports[`catalogue reference replay: cercles-sacres, seed 23 1`] = `
{
  "actionTypes": [
    "discard_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "98044ff41595c4acc1459a4af0fbbcc0201a91e0317eb0c89e9f05c55bd44719",
}
`;

exports[`catalogue reference replay: cercles-sacres, seed 67 1`] = `
{
  "actionTypes": [
    "discard_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "4d4f811f761c38ab7a14ca1504aa0545e0e9039ae5e2d0a082dbe544e1b4782d",
}
`;

exports[`catalogue reference replay: contes-et-cacahuetes, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 40,
  "traceDigest": "bc2a0712368819273bd9cdd48400ffbbf960e5a8f74cff846d819265ce360add",
}
`;

exports[`catalogue reference replay: contes-et-cacahuetes, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 37,
  "traceDigest": "d6d3c15b348bd629408d1c0142a45c808eb61df2835f58b0f85b540120e49976",
}
`;

exports[`catalogue reference replay: contes-et-cacahuetes, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 62,
  "traceDigest": "89f7d752d21f05a0a242b47f9b4f68847edb5393e281296f787753f77a3198d6",
}
`;

exports[`catalogue reference replay: corridor, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "pathWalls_move",
    "pathWalls_place_wall",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "fca0988b35bbe3c9aa5f40085e0cdd2639e1c2efe84b942eb3265e2e2e67827d",
}
`;

exports[`catalogue reference replay: corridor, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "pathWalls_move",
    "pathWalls_place_wall",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "92970ccf843a16495ff26be483d490067ec8f75e54f8d93db79a18e3a4ce0a02",
}
`;

exports[`catalogue reference replay: corridor, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "pathWalls_move",
    "pathWalls_place_wall",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "15b9ee41941032895dce482ae35ce107031aadf33a0be46a80145b76dffa9507",
}
`;

exports[`catalogue reference replay: course-des-etoiles, seed 11 1`] = `
{
  "actionTypes": [
    "avancer",
  ],
  "finished": true,
  "steps": 5,
  "traceDigest": "4a14ea82875b4d006c6b3c8f62fc555affef5065f0a0184724371ae32876385d",
}
`;

exports[`catalogue reference replay: course-des-etoiles, seed 23 1`] = `
{
  "actionTypes": [
    "avancer",
  ],
  "finished": true,
  "steps": 5,
  "traceDigest": "c059423c16bed45783dd3c73c7012d577913f269482acd9f701a3fd1bff3dafd",
}
`;

exports[`catalogue reference replay: course-des-etoiles, seed 67 1`] = `
{
  "actionTypes": [
    "avancer",
  ],
  "finished": true,
  "steps": 5,
  "traceDigest": "52a902854ddd66cd5faed0c174fd785a79d72e5280f9542e2888bbc164d836f7",
}
`;

exports[`catalogue reference replay: dame-nature, seed 11 1`] = `
{
  "actionTypes": [
    "ask_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "8d9ee0755c228595fdb7e818d5431e4cb078dd7b695039df41b9bbdf5675b3e6",
}
`;

exports[`catalogue reference replay: dame-nature, seed 23 1`] = `
{
  "actionTypes": [
    "ask_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "d8a504adeff0ce4990b6b3813c280646b148779828d365b2a2bc7a22f9e532b2",
}
`;

exports[`catalogue reference replay: dame-nature, seed 67 1`] = `
{
  "actionTypes": [
    "ask_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "e3a9ff5e8506264080c696dacc14c149909b6ec3e47b5f51351c41ffc2d2c92f",
}
`;

exports[`catalogue reference replay: en-attendant-minuit, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 45,
  "traceDigest": "3ac5039b1ebb1ed13503ce62335ae0a4bf3a13689e58e81c2b2c65e2e7080a03",
}
`;

exports[`catalogue reference replay: en-attendant-minuit, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 61,
  "traceDigest": "5f768c1149fe090bfb46f7e136f3394c8d592bdf84beaccdc66d73f640c210bd",
}
`;

exports[`catalogue reference replay: en-attendant-minuit, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 48,
  "traceDigest": "468c7a2641ffdbfe7f8dec05d652150eadb82a6c9245c53aba30d765df29a7ff",
}
`;

exports[`catalogue reference replay: entre-rites-et-lumieres, seed 11 1`] = `
{
  "actionTypes": [
    "ask_card",
    "choice.resolve",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "7ea185466e72a429436ddd15e6b644bcbf8ec57eedf93e1a69e32d0318706ae1",
}
`;

exports[`catalogue reference replay: entre-rites-et-lumieres, seed 23 1`] = `
{
  "actionTypes": [
    "ask_card",
    "choice.resolve",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "afbee66c15545451455b8922afe97ef30c130c18eaf952c9ddf65d364a708172",
}
`;

exports[`catalogue reference replay: entre-rites-et-lumieres, seed 67 1`] = `
{
  "actionTypes": [
    "ask_card",
    "choice.resolve",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "2491c4b18758736bd2160d091f37348db45ad95606ff91332df3f54361b7b2d4",
}
`;

exports[`catalogue reference replay: foulees-fantastiques, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "02a67b00e9e512552d5fed352e12d85d5b13ad3387296db484e648265d5aa45f",
}
`;

exports[`catalogue reference replay: foulees-fantastiques, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "90ff2586852f5de8c8c872b67dfb8d2000f0ee9af03ee156562671c339e2242e",
}
`;

exports[`catalogue reference replay: foulees-fantastiques, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "2c990b5bf486e19949b1e48652de253019c97a31798c71d1a88150f1cbc1f4cf",
}
`;

exports[`catalogue reference replay: frousse-party, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 43,
  "traceDigest": "754426cc53cdcab6479aab507e8a271e4397040a8e4d9e10f1905abc2559511b",
}
`;

exports[`catalogue reference replay: frousse-party, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 39,
  "traceDigest": "e3fb8d829b80b53f50bca4e653438d5961f68fa70e8882d9861467ecead71352",
}
`;

exports[`catalogue reference replay: frousse-party, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 35,
  "traceDigest": "d818f238d45d5bd98abde09e3e245de95a7bff10a10ba0730ae4f4df2724faec",
}
`;

exports[`catalogue reference replay: galopons-ensemble, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "ab9f31bfb803d02ab7b4307a75b9b4ed2ff3ad553795d482a38a18619ef8d849",
}
`;

exports[`catalogue reference replay: galopons-ensemble, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "9f013154184b5a0539f03da827c727102ef1b62a2b1f2bd3e9cc7408b0e57685",
}
`;

exports[`catalogue reference replay: galopons-ensemble, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 20,
  "traceDigest": "4885cd2f06ab8a8bd73e67a813cd16594a1499e712fd855a2aec8b0fcd339dc5",
}
`;

exports[`catalogue reference replay: gerard-president, seed 11 1`] = `
{
  "actionTypes": [
    "choose_winner",
    "pass",
    "play_name",
    "play_special",
    "set_theme",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "13c82814f11a2a9dcfd125b073ca3b2dd3d20d539115af272ecb37f71458c233",
}
`;

exports[`catalogue reference replay: gerard-president, seed 23 1`] = `
{
  "actionTypes": [
    "choose_winner",
    "pass",
    "play_name",
    "play_special",
    "set_theme",
  ],
  "finished": true,
  "steps": 56,
  "traceDigest": "be0ffa171455b10d8823b0aad318fe12ff2b4579773811ce8cddea4160e52c87",
}
`;

exports[`catalogue reference replay: gerard-president, seed 67 1`] = `
{
  "actionTypes": [
    "choose_winner",
    "pass",
    "play_name",
    "play_special",
    "set_theme",
  ],
  "finished": true,
  "steps": 64,
  "traceDigest": "aeff75f7194e65870a77e6448755f7111242e760789e9987ad9a8bb668010c0d",
}
`;

exports[`catalogue reference replay: jeu-oie, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 39,
  "traceDigest": "fb7d2dce40c6f4862c612274e369eae7843f06e8038a507c645b0e9ed4d230ee",
}
`;

exports[`catalogue reference replay: jeu-oie, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 31,
  "traceDigest": "008634b259d6ab7c8f9b2804f4f8a8a16275bac427f09c98b71f19113fbf64cb",
}
`;

exports[`catalogue reference replay: jeu-oie, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 19,
  "traceDigest": "d3251a08e0fc87845880d2c15965d2bc6795e8513af4572d5d84a0fd4b7946ac",
}
`;

exports[`catalogue reference replay: la-bande-a-banane, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 32,
  "traceDigest": "dd98d5136add366c5e32fde645912bd52945b10941719748f477d74ef7c6756e",
}
`;

exports[`catalogue reference replay: la-bande-a-banane, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "choice.timeout",
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 23,
  "traceDigest": "65d65776f9cfc71dd351ade1e6fb906bbdfd8e186db66ea567d7e614bbe89aa4",
}
`;

exports[`catalogue reference replay: la-bande-a-banane, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 24,
  "traceDigest": "84dfcd261325db756c3ec4db60876d670b98eff0c9740fc28cc83b554122a089",
}
`;

exports[`catalogue reference replay: la-grande-mine-de-barbak, seed 11 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 48,
  "traceDigest": "fae379f5f7b18d8b9a5da64ffd92fda8064a44dfb8a0e9d121e3c7020295f03e",
}
`;

exports[`catalogue reference replay: la-grande-mine-de-barbak, seed 23 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 21,
  "traceDigest": "df063dd30be7840ef8ca69f9887059935ec0db84f2714825eb72740c67047001",
}
`;

exports[`catalogue reference replay: la-grande-mine-de-barbak, seed 67 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 52,
  "traceDigest": "c33a513a96cf23f53caac7a1fc91a6bf1aa660c71d1f58f33163a68f0e58c4f1",
}
`;

exports[`catalogue reference replay: la-parade-sucree, seed 11 1`] = `
{
  "actionTypes": [
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "60a930dd1ae0fb1a9d2aaf8a679087d55ac19c00b4c9b6ce648d566ee9092e03",
}
`;

exports[`catalogue reference replay: la-parade-sucree, seed 23 1`] = `
{
  "actionTypes": [
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "614dfeb5055c708857e66e9ce6992456b57784e96fea828db059f0090985dc52",
}
`;

exports[`catalogue reference replay: la-parade-sucree, seed 67 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "5e32c99b6abb2c8a312c64c22a2da9728acca3f213d401cd861611c0a3e1b9f7",
}
`;

exports[`catalogue reference replay: lama, seed 11 1`] = `
{
  "actionTypes": [
    "cards-discard-penalty-play",
    "cards-discard-penalty-quit",
    "draw",
    "game.configure",
  ],
  "finished": true,
  "steps": 17,
  "traceDigest": "ade0660851c5aff8f065b79c34879abed9e6cb44ecceb632d58277c8d963124c",
}
`;

exports[`catalogue reference replay: lama, seed 23 1`] = `
{
  "actionTypes": [
    "cards-discard-penalty-play",
    "cards-discard-penalty-quit",
    "game.configure",
  ],
  "finished": true,
  "steps": 12,
  "traceDigest": "598bc50b3601f4718dfbd09dca3980772bc7c35ef297eef27d7da3d186dcd80c",
}
`;

exports[`catalogue reference replay: lama, seed 67 1`] = `
{
  "actionTypes": [
    "cards-discard-penalty-play",
    "cards-discard-penalty-quit",
    "game.configure",
  ],
  "finished": true,
  "steps": 9,
  "traceDigest": "781c00fdf8b106bb79f28f64fe5c39856aa61cfa4d95e8e4fa82619b937bb2c2",
}
`;

exports[`catalogue reference replay: le-marche-des-merveilles, seed 11 1`] = `
{
  "actionTypes": [
    "buy",
    "pass",
    "protect",
    "rumor",
    "sell",
  ],
  "finished": true,
  "steps": 12,
  "traceDigest": "7161edba8fd06c2f50b6864f49b3fbbbe0eda266a1f680837b36cc79cfba039e",
}
`;

exports[`catalogue reference replay: le-marche-des-merveilles, seed 23 1`] = `
{
  "actionTypes": [
    "buy",
    "pass",
    "protect",
    "rumor",
  ],
  "finished": true,
  "steps": 12,
  "traceDigest": "0fd7d49d966990cc6dd8bb765554ad13527ebc421f2d9602d868536cc2babb53",
}
`;

exports[`catalogue reference replay: le-marche-des-merveilles, seed 67 1`] = `
{
  "actionTypes": [
    "buy",
    "pass",
    "protect",
    "rumor",
  ],
  "finished": true,
  "steps": 12,
  "traceDigest": "9ac8a1ef20f94e4a2a8b53738517792c39e9457dd9caed94d4b74df374f5cc90",
}
`;

exports[`catalogue reference replay: les-absurdissimes, seed 11 1`] = `
{
  "actionTypes": [
    "judge_pick",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "9d7824a2ae58b20928413617ace474257bb587fd53dfc33ad6c09d3b5676699f",
}
`;

exports[`catalogue reference replay: les-absurdissimes, seed 23 1`] = `
{
  "actionTypes": [
    "judge_pick",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "e89529d0062a82d674821bdc709da2a1514c2ec24e827317a20d64e6bd11ebcd",
}
`;

exports[`catalogue reference replay: les-absurdissimes, seed 67 1`] = `
{
  "actionTypes": [
    "judge_pick",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "7763c29c8bf90c9d564d98460a9588fdc862732bcebc4c8636ca1294c51b38fe",
}
`;

exports[`catalogue reference replay: les-mains-de-la-terre, seed 11 1`] = `
{
  "actionTypes": [
    "request_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "b2c3f36d67e8d118d00e3860083af83be62a98e84547633953a31a53c099be08",
}
`;

exports[`catalogue reference replay: les-mains-de-la-terre, seed 23 1`] = `
{
  "actionTypes": [
    "request_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "3566db17210a656064639fda6b6fa81749ecfbc0ab4bdfb20c01453f2b6c6685",
}
`;

exports[`catalogue reference replay: les-mains-de-la-terre, seed 67 1`] = `
{
  "actionTypes": [
    "request_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "c5f5c35b12d74532eced1b0e490e4b948e221b65b53d5db0e9da0f61f5b9a7f1",
}
`;

exports[`catalogue reference replay: mission-galaxie, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 32,
  "traceDigest": "02b85e896f65412fb73e3d7881d98c83e684fcd45388f74d58a088d2db0908fe",
}
`;

exports[`catalogue reference replay: mission-galaxie, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 23,
  "traceDigest": "c22d009f29d9c54ab7cf06ed93d06769f47a8509515adb10421de8d9ad6aeae8",
}
`;

exports[`catalogue reference replay: mission-galaxie, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 29,
  "traceDigest": "864f4cac1829ba8638d9f2e5ed726998d7fd410c8062e90e77728f28a5ed243d",
}
`;

exports[`catalogue reference replay: mon-village-mon-histoire, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 22,
  "traceDigest": "f1b38aa6285f3a42e9dcbcb6932ece83deb19ee6e9d68422414df54235367670",
}
`;

exports[`catalogue reference replay: mon-village-mon-histoire, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 22,
  "traceDigest": "de8f0d50a8fe3bf837c31a361554ab3e8c26762ffbb9eef52ca3090afeb6bdbb",
}
`;

exports[`catalogue reference replay: mon-village-mon-histoire, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 28,
  "traceDigest": "69b765f767239aa342e1eb74e914495f317e4490cee5dd385e4f4ac1eb15e109",
}
`;

exports[`catalogue reference replay: morpion, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "morpion_play",
  ],
  "finished": true,
  "steps": 11,
  "traceDigest": "93c509a5f09f8776a30f961dfacaeaaa60a205d04420ef06c4edd27f939bbe01",
}
`;

exports[`catalogue reference replay: morpion, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "morpion_play",
  ],
  "finished": true,
  "steps": 7,
  "traceDigest": "9fb1091bd2b22c60484f4eb02e963fc9e5c6493db4b860c09f808c6953dadad6",
}
`;

exports[`catalogue reference replay: nawak, seed 11 1`] = `
{
  "actionTypes": [
    "choose_answer",
    "vote_answer",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "afa3670f88c0105b95bf558f2134df8c3c86bbf615f7618ea8a03a2570f92fcf",
}
`;

exports[`catalogue reference replay: nawak, seed 23 1`] = `
{
  "actionTypes": [
    "choose_answer",
    "vote_answer",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "6b81caba8afcc50f9a1d28d14e003dea998e3dacd96469803a6c5b3d145bb0d9",
}
`;

exports[`catalogue reference replay: nawak, seed 67 1`] = `
{
  "actionTypes": [
    "choose_answer",
    "vote_answer",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "d900c4d1fe77a8e4d2ee9eac825bddca4ae9749d8179c31322279fe898518de2",
}
`;

exports[`catalogue reference replay: odyssee-quatre-cieux, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "47f96d654083f7f8b15bf0141a1894be509ef45791a2fc739923ba2e259787ed",
}
`;

exports[`catalogue reference replay: odyssee-quatre-cieux, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "1e6c2131767a48909ead05138aacf72e43e40644ed75c3071902f6794312c6c7",
}
`;

exports[`catalogue reference replay: odyssee-quatre-cieux, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "86079c4bb815e85c318bb45a966fca7194510b199dac3dca740ceac36c12f139",
}
`;

exports[`catalogue reference replay: olympia, seed 11 1`] = `
{
  "actionTypes": [
    "draw_card",
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "80d59b8311a745d3297b0e37007eb152190b5e8b1957183d06888889547b1925",
}
`;

exports[`catalogue reference replay: olympia, seed 23 1`] = `
{
  "actionTypes": [
    "draw_card",
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "f96d46245166f52414c478fe85981be8e210fe254b7788546d731a93aadae597",
}
`;

exports[`catalogue reference replay: olympia, seed 67 1`] = `
{
  "actionTypes": [
    "draw_card",
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "374880fd0474c7c2c64591e95529c47f442fa5b3e61bfae5536ac4b376ed1bd8",
}
`;

exports[`catalogue reference replay: panier-express, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "5b1bfcebef2122cce0d12d84ab2adf9dfcebab638fceaf8bc6007ac06ef147bb",
}
`;

exports[`catalogue reference replay: panier-express, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "509c0a0c9cc04bda5c53db7352eec43c6a2da9850ba362778f00970f4342d01b",
}
`;

exports[`catalogue reference replay: pimp-my-ride, seed 11 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "b4a6cbf5746f2c628d1db15c5980e29498c3d1132cfe1a87683ecd4d3b90190f",
}
`;

exports[`catalogue reference replay: pimp-my-ride, seed 67 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "5d1ca37d60530519c8eafe611915402cc452be07e3da4908a0722ba988705230",
}
`;

exports[`catalogue reference replay: pirates-en-vadrouille, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 33,
  "traceDigest": "7723cde48e7c729b5682295628b07f981090fe435e204acd2c891784808116c3",
}
`;

exports[`catalogue reference replay: pirates-en-vadrouille, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "7ee006e46a94addbc75d3207d0b1b5fa8e50b020078e366d7e15a5d9a558773a",
}
`;

exports[`catalogue reference replay: pirates-en-vadrouille, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 27,
  "traceDigest": "8ff50ff013831bfd13be669396d5a5fdae3c9bcfd0634d95bff9c1efd3057ea2",
}
`;

exports[`catalogue reference replay: primalis, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 13,
  "traceDigest": "b59a8a55b517140517a8e24aed7e3ba7163a9145b8ec32a4329f036325e0a9a1",
}
`;

exports[`catalogue reference replay: primalis, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 14,
  "traceDigest": "a29550c8605167198aab2d69648bb54f059d19471aa3cfb071877b80bb8017e0",
}
`;

exports[`catalogue reference replay: primalis, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 9,
  "traceDigest": "90bfe6222d96097a5e601d5f9fb43265ef44084ddf546b299f5a7c25848b2606",
}
`;

exports[`catalogue reference replay: sac-a-malices, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "mortgage",
    "pay_fine",
    "roll",
    "unmortgage",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "6aafe6eef8c43735f1ceeef60f8b9eba292d3b88e77c9b907cd5dbcb0e07097f",
}
`;

exports[`catalogue reference replay: sac-a-malices, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "mortgage",
    "roll",
    "unmortgage",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "1aa1b18edf90f9ea903011db0ca5a66a1bedd1a8150ac74bb410fdaee7269581",
}
`;

exports[`catalogue reference replay: sac-a-malices, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "mortgage",
    "pay_fine",
    "roll",
    "unmortgage",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "686935dd41438369298b02a7bb95f699d879363939973c2adb64c347d990746c",
}
`;

exports[`catalogue reference replay: taxi-express, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "a4f62973b1fa0962108ddc221b57af219abf2575488bf36b61ff8f54a6f8ea98",
}
`;

exports[`catalogue reference replay: taxi-express, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "4b1db8977d5ea1273475f4d06382774451a92ad0776af7000cb8cd417b02d76a",
}
`;

exports[`catalogue reference replay: taxi-express, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "991b859b7eabf737563d3a6c779343d9fa555327cc30c71753f22965c18c59d9",
}
`;

exports[`catalogue reference replay: tout-pres-de-maman, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 23,
  "traceDigest": "9ae253846a688dcbd506b02e24d10d5d6844e16d5e57ff7fff3c3919e4130685",
}
`;

exports[`catalogue reference replay: tout-pres-de-maman, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 18,
  "traceDigest": "7dc13a953819a0c0cbf45afa8f5cd9500c2ed6381e86e972cb99148044681def",
}
`;

exports[`catalogue reference replay: tout-pres-de-maman, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 21,
  "traceDigest": "9d02fc4bcf46fdaf26789456e3661194ef8bb4ca3dd98855459d379e3ac3dee6",
}
`;

exports[`catalogue reference replay: voyage-en-terre-de-brumes, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "d2243174e4774c0be90f2f4fc833447df6a40baab37b751395dfdbba61af186f",
}
`;

exports[`catalogue reference replay: voyage-en-terre-de-brumes, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "c6d5d8764f67f8df304f3a016aa0429cec17876137f58bfab49b7397fda18448",
}
`;

exports[`catalogue reference replay: voyage-en-terre-de-brumes, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "cf752c251e6b21e54a7c7b372195a2e7656107dd621680c07b425b183e162d9f",
}
`;

exports[`catalogue reference replay: zig-et-zag, seed 11 1`] = `
{
  "actionTypes": [
    "draw_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "5b3103017ea2c4069be20295f837df158882dfa2b914f4107f98c22cf48c01ad",
}
`;

exports[`catalogue reference replay: zig-et-zag, seed 23 1`] = `
{
  "actionTypes": [
    "draw_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "e5c45086de97860d52d2242942e6e772a7cd29f3d5c1e557262331a6c6c95eba",
}
`;

exports[`catalogue reference replay: zig-et-zag, seed 67 1`] = `
{
  "actionTypes": [
    "draw_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "8508eacf5c35b21b9bbc4b66fc916c108cc170296c4d2db38bc3851e692f3e97",
}
`;

exports[`choice reference replay: cat-pattes, seed 37 1`] = `
{
  "actionTypes": [
    "discard_card",
    "draw",
    "game.configure",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "883eb76d832436b182eeac258324e5e0005f08442da34194c986897683ff9869",
}
`;

exports[`collection reference replay: la-bande-a-banane, seed 41 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 26,
  "traceDigest": "7caa27662593155ad29eb8d41753f928b9840aa1f497de59774fb6b111bacaa8",
}
`;

exports[`race reference replay: a-fond-les-ballons, seed 53 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 50,
  "traceDigest": "979bd497d4e14879d5f68d829674258322e1e04049f4e8738caecbc3419a4f4b",
}
`;

exports[`spatial reference replay: morpion, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "morpion_play",
  ],
  "finished": true,
  "steps": 11,
  "traceDigest": "528e7a05e18809cdd98408423e4e85c4a10658f66061d44409eb7aec48481b10",
}
`;
